# DNN

./: .gitignore  1.c  CMakeLists.txt  README.md  dnn.c  dnn.h  main.c
include/: I_O.h  dnn.h  layer.h  memory_manage.h
intermediate_value_dat/: conv1.txt  input_data_after_padding.txt
lib/: stb_image.h
src/: I_O.c  dnn.c  layer.c  memory_manage.c
